// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds-hover() should return correct css for opts: { inset: '-4px -2px', borderRadius: '6px' } 1`] = `
"div {
  position: relative;
  z-index: 0;
}
@media (hover: hover) {
  div:hover::before {
    backdrop-filter: blur(32px);
    -webkit-backdrop-filter: blur(32px);
    content: "";
    position: absolute;
    inset: -4px -2px;
    pointer-events: none;
    z-index: -1;
    background: rgba(148, 149, 152, 0.18);
    border-radius: 6px;
  }
}"
`;

exports[`pds-hover() should return correct css for opts: { offset: 'medium', borderRadius: 'medium' } 1`] = `
"div {
  position: relative;
  z-index: 0;
}
@media (hover: hover) {
  div:hover::before {
    backdrop-filter: blur(32px);
    -webkit-backdrop-filter: blur(32px);
    content: "";
    position: absolute;
    inset: -6px;
    pointer-events: none;
    z-index: -1;
    background: rgba(148, 149, 152, 0.18);
    border-radius: 8px;
  }
}"
`;

exports[`pds-hover() should return correct css for opts: { offset: 'small', borderRadius: 'small' } 1`] = `
"div {
  position: relative;
  z-index: 0;
}
@media (hover: hover) {
  div:hover::before {
    backdrop-filter: blur(32px);
    -webkit-backdrop-filter: blur(32px);
    content: "";
    position: absolute;
    inset: -4px;
    pointer-events: none;
    z-index: -1;
    background: rgba(148, 149, 152, 0.18);
    border-radius: 4px;
  }
}"
`;

exports[`pds-hover() should return correct css for opts: {} 1`] = `
"div {
  position: relative;
  z-index: 0;
}
@media (hover: hover) {
  div:hover::before {
    backdrop-filter: blur(32px);
    -webkit-backdrop-filter: blur(32px);
    content: "";
    position: absolute;
    inset: -4px;
    pointer-events: none;
    z-index: -1;
    background: rgba(148, 149, 152, 0.18);
    border-radius: 4px;
  }
}"
`;
